--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "--- title: Real-World Front-end Task client: utility design date: 2019-04-18 ---",
   "main": "index.js",
   "scripts": {
-    "test": "mocha spec"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
